# nova-specs

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  setup.py  template.rst  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  priorities  (+1 more)
priorities/: 2023.1-priorities.rst  2023.2-priorities.rst  2024.1-priorities.rst  2024.2-priorities.rst  2025.1-priorities.rst  2025.2-priorities.rst  2026.1-priorities.rst  kilo-priorities.rst  liberty-priorities.rst  mitaka-priorities.rst  newton-priorities.rst  ocata-priorities.rst  pike-priorities.rst  priority-blueprints-to-review.yaml  queens-priorities.rst  rocky-priorities.rst  stein-priorities.rst  train-priorities.rst  ussuri-priorities.rst  victoria-priorities.rst  wallaby-priorities.rst  xena-priorities.rst  yoga-priorities.rst  zed-priorities.rst
specs/: 2023.1-template.rst  2023.2-template.rst  2024.1-template.rst  2024.2-template.rst  2025.1-template.rst  2025.2-template.rst  2026.1-template.rst  2027.1-template.rst  backlog-template.rst  kilo-template.rst  liberty-template.rst  mitaka-template.rst  newton-template.rst  ocata-template.rst  pike-template.rst  queens-template.rst  rocky-template.rst  stein-template.rst  template.rst  train-template.rst  ussuri-template.rst  victoria-template.rst  wallaby-template.rst  xena-template.rst  yoga-template.rst  zed-template.rst
tests/: test_directories.py  test_titles.py
tools/: abandon_spec.py  count_blueprints.py  fast-specs.sh  lib.py  move_implemented_specs.py  move_spec.py
(+1093 files in other folders)
