[metadata]
name = nova-specs
summary = OpenStack Nova Project Development Specs
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://specs.openstack.org/openstack/nova-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
